<resources>
    <string name="app_name">RickshawFairSylhet</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset">Reset</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="timer">00:00:00</string>
    <string name="startText">start</string>
    <string name="resetText">reset</string>
    <string name="stopText">stop</string>
    <string name="fair_time">0.00 Taka</string>
    <string name="server_error">Server error. Something when wrong with the server</string>
    <string name="help">Help</string>
    <string name="about">About</string>

</resources>
